syntax = "proto3";
package proto;
option go_package ="./user";
import "user.proto";
service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc Register(RegisterRequest) returns (RegisterResponse);
}

message LoginRequest{
   string username =1 ;
   string password =2 ;
}

message LoginResponse{
  User user = 1 ;
  string  token = 2;
}

message RegisterRequest{
  User user = 1 ;
}

message RegisterResponse{
}
